Adds vagrant tools to deps

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -54,5 +54,6 @@ galaxy_info:
 
 dependencies:
     - benthomasson.network_architect
+    - benthomasson.vagrant_tools
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
